--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     location /phoenix {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.html index.html;
         try_files $uri /phoenix/index.html;
     }
 }
